[project]
name = "xclient"
version = "0.1.0"
description = "A Python client for the public X API."
license = 'MIT'
readme = "README.md"
authors = [
    {name = 'Joey Chilson', email = 'joeychilson@outlook.com'}
}
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.10.0",
]

[tool.setuptools.packages.find]
include = ["xclient*"]
